@@ -1,3 +1,7 @@
+2012-12-05  Yufeng Zhang  <yufeng.zhang@arm.com>
+
+	* g++.dg/abi/arm_va_list.C: Also test on aarch64*-*-*.
+
 2012-12-05  James Greenhalgh  <james.greenhalgh@arm.com>
 
 	* gcc.dg/vect/vect-rounding-btrunc.c: New test.
